--- a/index.html
+++ b/index.html
@@ -1,11 +1,45 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>My Portfolio</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Conrad's Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Welcome to My Portfolio!</h1>
-    <p>This is a simple GitHub Pages website.</p>
+    <header>
+        <h1>Conrad's Portfolio</h1>
+        <nav>
+            <a href="#about">About</a>
+            <a href="#projects">Projects</a>
+            <a href="#contact">Contact</a>
+        </nav>
+    </header>
+
+    <section id="about">
+        <h2>About Me</h2>
+        <p>Hello! I’m Conrad, a software developer passionate about building impactful projects. Welcome to my portfolio!</p>
+    </section>
+
+    <section id="projects">
+        <h2>Projects</h2>
+        <div class="project">
+            <h3>Project 1</h3>
+            <p>A brief description of your project goes here.</p>
+        </div>
+        <div class="project">
+            <h3>Project 2</h3>
+            <p>A brief description of your project goes here.</p>
+        </div>
+    </section>
+
+    <section id="contact">
+        <h2>Contact Me</h2>
+        <p>Email: <a href="mailto:conrad@example.com">conrad@example.com</a></p>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Conrad's Portfolio</p>
+    </footer>
 </body>
 </html>
-
